fix: add border styles to various components for improved visibility and consistency

--- a/src/globals.css
+++ b/src/globals.css
@@ -187,7 +187,7 @@
   }
 
   .post_details-card {
-    @apply bg-dark-2 w-full max-w-3xl rounded-[11px] flex-col flex border border-dark-4 xl:rounded-[16px];
+    @apply bg-dark-3 w-full max-w-3xl rounded-[11px] flex-col flex border border-dark-4 xl:rounded-[16px];
   }
 
   .post_details-img {
@@ -286,12 +286,12 @@
   }
 
   .creator-card {
-    @apply flex px-1.5 py-3.5 w-40 rounded-xl bg-dark-3 hover:bg-dark-4 transition-all border border-dark-4;
+    @apply flex px-1.5 py-3.5 w-40 rounded-xl bg-dark-3 hover:bg-dark-4 transition-all border border-light-4 border-opacity-50;
   }
 
   /* Post Card */
   .post-card {
-    @apply bg-dark-2 rounded-2xl border  border-dark-4 p-5 lg:p-7 w-full max-w-screen-sm;
+    @apply bg-dark-2 rounded-2xl border  border-light-4 border-opacity-50 p-5 lg:p-7 w-full max-w-screen-sm;
   }
   .post-card_img {
     @apply h-[310px] xs:h-[360px] overflow-hidden bg-dark-4 lg:h-[450px] w-full object-cover;
@@ -308,7 +308,7 @@
 
   /* User card */
   .user-card {
-    @apply flex gap-4 border border-dark-4 rounded-xl px-3.5 py-3.5;
+    @apply flex gap-4 border border-light-4 border-opacity-60 rounded-xl px-3.5 py-3.5;
   }
 
   .post-comments-container {
@@ -455,33 +455,33 @@
   }
 
   .shad-input {
-    @apply h-10 bg-dark-4 border-none placeholder:text-light-3 focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
+    @apply h-10 bg-dark-4  placeholder:text-light-3 border border-light-4 border-opacity-50 focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
   }
 
   .shad-textarea {
-    @apply h-72 lg:h-96 bg-dark-3 rounded-xl border-none focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
+    @apply h-72 lg:h-96 bg-dark-3 rounded-xl border border-light-4 border-opacity-50 focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
   }
   .shad-msg-textarea {
     @apply max-h-56 min-h-10 resize-none custom-scrollbar bg-dark-3 rounded-xl border-none focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
   }
 
   .shad-comment {
-    @apply h-24 bg-dark-3 rounded-xl border-none focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
+    @apply h-24 bg-dark-3 rounded-xl border border-light-4 border-opacity-50 focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
   }
   .shad-reply {
-    @apply h-[72px] bg-dark-3 rounded-xl border-none focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
+    @apply h-[72px] bg-dark-3 rounded-xl border border-light-4 border-opacity-50 focus-visible:ring-1 focus-visible:ring-offset-1 ring-offset-light-3 !important;
   }
 
   /* Button */
   .shad-button_primary {
-    @apply h-10 bg-gradient-to-r from-purple-500 to-purple-400 hover:bg-violet-600 text-light-1 border border-light-2 flex gap-2 !important;
+    @apply h-10 bg-gradient-to-r from-purple-500 to-purple-400 hover:bg-violet-600 text-light-1 border border-light-2 border-opacity-50 flex gap-2 !important;
   }
 
   .shad-button_dark_4 {
-    @apply h-10 bg-dark-4 px-5 text-light-1 border border-light-4 flex gap-2 !important;
+    @apply h-10 bg-dark-4 px-5 text-light-1 border border-light-4 border-opacity-50 flex gap-2 !important;
   }
   .shad-button_dark_3 {
-    @apply h-11 bg-dark-4 px-9 w-28 rounded-full text-light-1 flex gap-2 !important;
+    @apply h-11 bg-dark-4 px-9 w-28 rounded-full text-light-1 flex gap-2 border-light-4 border-opacity-50 !important;
   }
 
   .shad-button_ghost {
